ocp-ha-lab/files/templates/allow-8080-frontend.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-8080-frontend
spec:
  podSelector:
    matchLabels:
      app: jenkins
  ingress:
  - ports:
    - protocol: TCP
      port: 8080
